# teldrop

./: Cargo.toml  README.md  chats.txt  dist-workspace.toml
.github/workflows/: packages.yml  release.yml
src/: config.rs  main.rs  media.rs  telegram.rs
src/commands/: chats.rs  download.rs  login.rs  logout.rs  mod.rs
src/tui/: app.rs  mod.rs  ui.rs
